Performance fix.